# PoolEditParser

./: README.md
src/: .gitignore  1.2_funcional.xml  Alarm_test_export.xml  CMakeLists.txt  MonitorPlantio_export.xml  MonitorPulverizacao_export.xml  SCREEN_1.0_export.xml  SCREEN_1.1_export.xml  SCREEN_1.2.2_export.xml  SCREEN_1.2_export.xml  build.cmd  demo_export.xml  demo_export_keysemmacro.xml  demo_export_keywithrole.xml  demo_final.xml  demo_sem_barra_export.xml  op.h  op_test_demo_export.xml  parser.cxx  parserdef.h  pooleditparser  pooleditparser.cxx  xml.cxx  xml.h
